# psc_mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: __init__.py  __main__.py  psc.py
src/psc_mpc/: __init__.py  __main__.py  psc.py
src/pscmcp/: __init__.py
