[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psc_mpc"
version = "0.0.5"
description = "普通话水平测试报名查询工具"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["psc", "普通话", "考试", "报名", "查询"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastmcp>=2.13.3",
  "requests>=2.31.0",
]
requires-python = ">=3.10"

[project.scripts]
psc_mpc = "psc_mpc:main"

[project.urls]
Homepage = "https://github.com/yourusername/psc_mpc"
Repository = "https://github.com/yourusername/psc_mpc"
Issues = "https://github.com/yourusername/psc_mpc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"