[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psc_mpc"
version = "0.1.1"
description = "普通话水平测试报名查询工具"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "toolor", email = "toolor@qq.com"},
]
keywords = ["psc", "普通话", "考试", "报名", "查询"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastmcp>=2.13.3",
  "requests>=2.31.0",
]
requires-python = ">=3.10"

[project.scripts]
psc_mpc = "psc_mpc:main"

[project.urls]
Homepage = "https://github.com/toolor/psc_mcp"
Repository = "https://github.com/toolor/psc_mcp"
Issues = "https://github.com/toolor/psc_mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"